<resources>
    <string name="app_name">GameApp</string>
    <string name="title_activity_nav">nav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="numDice">1</string>

    <string name="Die1">~</string>
    <string name="Die2">~</string>
    <string name="Die3">~</string>
    <string name="Die4">~</string>
    <string name="Die5">~</string>
    <string name="Die6">~</string>
    <string name="Die7">~</string>
    <string name="Die8">~</string>
    <string name="Die9">~</string>

    <string name="Add">Add</string>
    <string name="Remove">Remove</string>
    <string name="roll">Roll!</string>
    <string name="times_up">Time\'s up!</string>
    <string name="start">Start</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>

    <string name="team_player_1">1 Player\nScore: 0</string>
    <string name="team_player_2">2 Player\nScore: 0</string>
    <string name="team_player_3">3 Player\nScore: 0</string>
    <string name="team_player_4">4 Player\nScore: 0</string>
    <string name="team_player_5">5 Player\nScore: 0</string>
    <string name="team_player_6">6 Player\nScore: 0</string>

    <string-array name="players_array">
        <item>Player 1</item>
        <item>Player 2</item>
        <item>Player 3</item>
        <item>Player 4</item>
        <item>Player 5</item>
        <item>Player 6</item>
    </string-array>

    <string-array name="score_array">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
        <item>1000</item>
        <item>10000</item>
    </string-array>
</resources>
