<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/roll_dice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rex.gameapp.RollDice">

    <Button
        android:text="@string/roll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="rollDice" />

    <Button
        android:text="@string/Remove"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/remove_dice_button"
        android:layout_above="@+id/button"
        android:onClick="removeDie"/>

    <Button
        android:text="@string/Add"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/add_dice_button"
        android:layout_above="@+id/button"
        android:layout_alignParentEnd="true"
        android:onClick="addDie"/>

    <TextView
        android:text="@string/numDice"
        android:id="@+id/numDice"
        android:layout_width="150dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
        android:textAlignment="center"
        android:layout_height="35dp"
        android:layout_above="@+id/button"
        android:layout_toStartOf="@+id/add_dice_button" />

    <TextView
        android:id="@+id/Die3"
        android:text="@string/Die3"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/Die5"
        android:text="@string/Die5"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/Die4"
        android:layout_alignBottom="@+id/Die4"
        android:layout_alignStart="@+id/Die2" />

    <TextView
        android:id="@+id/Die7"
        android:text="@string/Die7"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Die4"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/Die9"
        android:text="@string/Die9"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Die5"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/Die8"
        android:text="@string/Die8"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Die5"
        android:layout_alignStart="@+id/Die5" />

    <TextView
        android:id="@+id/Die6"
        android:text="@string/Die6"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Die3"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/Die1"
        android:text="@string/Die1"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/Die4"
        android:text="@string/Die4"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Die1"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/Die2"
        android:text="@string/Die2"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
