<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rex.gameapp.Timer"
    android:background="@drawable/title">

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttRemoveSec"
        android:layout_marginTop="40dp"
        android:onClick="startTimer"
        android:text="@string/start"
        android:background="@drawable/button"/>
    <Button
        android:id="@+id/resume"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="resumeTimer"
        android:text="@string/resume"
        android:layout_below="@+id/stopButton"
        android:layout_alignParentStart="true"
        android:background="@drawable/button"/>

    <TextView
        android:text="@string/times_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="36sp"
        android:layout_marginTop="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button3"
        android:onClick="resetTimer"
        android:text="@string/stop"
        android:background="@drawable/button"/>

    <Button
        android:text="@string/Plus"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/buttAddSec"
        android:onClick="addSecond"
        android:layout_above="@+id/timeSelect"
        android:layout_alignEnd="@+id/timeSelect"
        android:background="@drawable/greenbutton"/>

    <Button
        android:text="@string/Plus"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/buttAddSecs"
        android:onClick="addTenSeconds"
        android:layout_above="@+id/timeSelect"
        android:layout_toStartOf="@+id/buttAddSec"
        android:background="@drawable/greenbutton"/>

    <Button
        android:text="@string/Plus"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/buttAddMin"
        android:onClick="addMinute"
        android:layout_above="@+id/timeSelect"
        android:layout_toEndOf="@+id/buttAddMins"
        android:background="@drawable/greenbutton"/>

    <Button
        android:text="@string/Plus"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/buttAddMins"
        android:onClick="addTenMinutes"
        android:layout_above="@+id/timeSelect"
        android:layout_alignStart="@+id/timeSelect"
        android:background="@drawable/greenbutton"/>

    <Button
        android:text="@string/Minus"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/buttRemoveSec"
        android:textSize="14sp"
        android:onClick="removeSecond"
        android:layout_below="@+id/timeSelect"
        android:layout_alignEnd="@+id/timeSelect"
        android:background="@drawable/redbutton"/>

    <Button
        android:text="@string/Minus"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/buttRemoveSecs"
        android:textSize="14sp"
        android:onClick="removeTenSeconds"
        android:layout_below="@+id/timeSelect"
        android:layout_toStartOf="@+id/buttRemoveSec"
        android:background="@drawable/redbutton"/>

    <Button
        android:text="@string/Minus"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/buttRemoveMin"
        android:textSize="14sp"
        android:onClick="removeMinute"
        android:layout_below="@+id/timeSelect"
        android:layout_toEndOf="@+id/buttRemoveMins"
        android:background="@drawable/redbutton"/>

    <Button
        android:text="@string/Minus"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:id="@+id/buttRemoveMins"
        android:textSize="14sp"
        android:onClick="removeTenMinutes"
        android:layout_below="@+id/timeSelect"
        android:layout_alignStart="@+id/timeSelect"
        android:background="@drawable/redbutton"/>

    <TextView
        android:text="00:30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeSelect"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>